fix(segment): leave left border on first element to have consistent look when elements wrap

--- a/src/definitions/elements/segment.less
+++ b/src/definitions/elements/segment.less
@@ -443,7 +443,7 @@
 .ui.segments > .horizontal.segments:first-child {
   border-top: none;
 }
-.ui.horizontal.segments > .segment:first-child {
+.ui.horizontal.segments:not(.stackable) > .segment:first-child {
   border-left: none;
 }
 
